--- a/submission1/data-code/data-build.ipynb
+++ b/submission1/data-code/data-build.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +301,24 @@
    "source": [
     "All code files for this project can be found in my [GitHub Repository](https://github.com/ilsenovis18/ECON470)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook data-build.ipynb to html\n",
+      "[NbConvertApp] Writing 644975 bytes to exported_notebook.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html --no-input --output exported_notebook.html data-build.ipynb"
+   ]
   }
  ],
  "metadata": {
@@ -319,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
