--- a/submission1/data-code/data-build.ipynb
+++ b/submission1/data-code/data-build.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +37,9 @@
     "county_sa_info_path = '/Users/ilsenovis/Documents/GitHub/ECON470/data/input/MA_Cnty_SA_2015_01.csv'\n",
     "\n",
     "# Read in your datasets using the dynamically constructed paths\n",
-    "contract_info = pd.read_csv(contract_info_path, encoding='ISO-8859-1')\n",
-    "enroll_info = pd.read_csv(enroll_info_path, encoding='ISO-8859-1')\n",
-    "county_sa_info = pd.read_csv(county_sa_info_path, encoding='ISO-8859-1')\n",
+    "contract_info = pd.read_csv(contract_info_path, encoding='latin1')\n",
+    "enroll_info = pd.read_csv(enroll_info_path, encoding='latin1')\n",
+    "county_sa_info = pd.read_csv(county_sa_info_path, encoding='latin1')\n",
     "\n",
     "#print(enroll_info.columns)\n",
     "#print(county_sa_info.columns)\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook data-build.ipynb to html\n",
-      "[NbConvertApp] Writing 644975 bytes to exported_notebook.html\n"
+      "[NbConvertApp] Writing 645491 bytes to exported_notebook.html\n"
      ]
     }
    ],
