--- a/submission2/results2/novis-i-hwk1-2.ipynb
+++ b/submission2/results2/novis-i-hwk1-2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -130,13 +130,13 @@
    "source": [
     "# Exluce SNP and EGHP plans, and plans between 800 and 899\n",
     "final_ma_data = full_ma_data[(full_ma_data['snp'] == \"No\") & (full_ma_data['eghp'] == \"No\") & ((full_ma_data['planid'] < 800) | (full_ma_data['planid'] >= 900))]\n",
-    "plans_per_type_updated = final_ma_data.pivot_table(index='plan_type', columns='year', values='planid', aggfunc='count')\n",
+    "plans_per_type = final_ma_data.pivot_table(index='plan_type', columns='year', values='planid', aggfunc='count')\n",
     "# Change the name of the index\n",
-    "plans_per_type_updated.index.name = 'Plan Type'\n",
+    "plans_per_type.index.name = 'Plan Type'\n",
     "# Sort values\n",
-    "plans_per_type_updated = plans_per_type_updated.sort_values(by=2015, ascending=False)\n",
+    "plans_per_type = plans_per_type.sort_values(by=2015, ascending=False)\n",
     "# Display the table\n",
-    "display(Markdown(plans_per_type_updated.to_markdown()))"
+    "display(Markdown(plans_per_type.to_markdown()))"
    ]
   },
   {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -195,11 +195,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook novis-i-hwk1-2.ipynb to pdf\n",
+      "/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (3.6.2).\n",
+      "Your version must be at least (1.12.1) but less than (3.0.0).\n",
+      "Refer to https://pandoc.org/installing.html.\n",
+      "Continuing with doubts...\n",
+      "  check_pandoc_version()\n",
+      "[NbConvertApp] Writing 21090 bytes to notebook.tex\n",
+      "[NbConvertApp] Building PDF\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/bin/jupyter-nbconvert\", line 11, in <module>\n",
+      "    sys.exit(main())\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/jupyter_core/application.py\", line 264, in launch_instance\n",
+      "    return super(JupyterApp, cls).launch_instance(argv=argv, **kwargs)\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/traitlets/config/application.py\", line 846, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/nbconvertapp.py\", line 369, in start\n",
+      "    self.convert_notebooks()\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/nbconvertapp.py\", line 541, in convert_notebooks\n",
+      "    self.convert_single_notebook(notebook_filename)\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/nbconvertapp.py\", line 506, in convert_single_notebook\n",
+      "    output, resources = self.export_single_notebook(notebook_filename, resources, input_buffer=input_buffer)\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/nbconvertapp.py\", line 435, in export_single_notebook\n",
+      "    output, resources = self.exporter.from_filename(notebook_filename, resources=resources)\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/exporters/exporter.py\", line 190, in from_filename\n",
+      "    return self.from_file(f, resources=resources, **kw)\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/exporters/exporter.py\", line 208, in from_file\n",
+      "    return self.from_notebook_node(nbformat.read(file_stream, as_version=4), resources=resources, **kw)\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/exporters/pdf.py\", line 183, in from_notebook_node\n",
+      "    self.run_latex(tex_file)\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/exporters/pdf.py\", line 153, in run_latex\n",
+      "    return self.run_command(self.latex_command, filename,\n",
+      "  File \"/Users/ilsenovis/opt/anaconda3/lib/python3.9/site-packages/nbconvert/exporters/pdf.py\", line 110, in run_command\n",
+      "    raise OSError(\"{formatter} not found on PATH, if you have not installed \"\n",
+      "OSError: xelatex not found on PATH, if you have not installed xelatex you may need to do so. Find further instructions at https://nbconvert.readthedocs.io/en/latest/install.html#installing-tex.\n"
+     ]
+    }
+   ],
    "source": [
-    "# jupyter nbconvert --to pdf --no-input --output novis-i-hwk1-2.pdf \"Homework 1.ipynb\""
+    "#!jupyter nbconvert --to pdf --no-input -`-output novis-i-hwk1-2.pdf novis-i-hwk1-2.ipynb"
    ]
   },
   {
